test/visibility/relative-use/use-relative-error3.good
use-relative-error3.chpl:5: error: Cannot find symbol 'this' in module 'K'
