test/visibility/relative-use/use-relative-error3.chpl
module M {

  module K { }

  use this.K.this;
}
